integrations/cron/v2/README.md
# Cron generator — Melody v2 binding

Melody v2 binding for the [`precision-soft/melody/integrations/cron`](..) crontab generator. See the [umbrella README](../README.md) for the full design, configuration parameters, cascade rules, per-command overrides, custom heartbeat command, [template customization](../README.md#customizing-the-template) (plug your own `Template` for Kubernetes / Supervisor / ...) and footguns.

## Install

```bash
go get github.com/precision-soft/melody/integrations/cron/v2@latest
```

## Import paths

```go
import (
    melodyapplicationcontract "github.com/precision-soft/melody/v2/application/contract"
    melodyclicontract "github.com/precision-soft/melody/v2/cli/contract"
    melodycron "github.com/precision-soft/melody/integrations/cron/v2"
    melodykernelcontract "github.com/precision-soft/melody/v2/kernel/contract"
)
```

## Quick wiring

See the [umbrella README](../README.md#configuration-parameters) for the full wiring walk-through (`cron.Configuration` registry, `RegisterDefaultParameters`, `NewGenerateCommand(configuration)`, parameter cascade, per-command overrides). The same examples apply verbatim with the v2 import paths above.

## Module dependencies

This module requires:

* `github.com/precision-soft/melody/v2` ≥ v2.7.0 (the minimum this module's [`go.mod`](./go.mod) requires)
* `github.com/urfave/cli/v3` ≥ v3.6.1

Everything else is stdlib. The package surface is shared across all three bindings — the ownership and user-column surface included (`OwnedTemplate`, `UserColumnTemplate`, `RendersUserColumn`, `CrontabOwnershipMarker`, `ErrBusyboxDivergentDaySchedule`) — apart from four things: the built-in `k8s` template and the `Commands` helper ship in the v3 binding only; the v3 binding alone gives the in-process runner a zone of its own (`Configuration.InTimezone`, `Configuration.TimezoneName`, the runner's `--timezone` flag and `ErrUnknownTimezone`); this binding keeps the deprecated abbreviated validation aliases the v3 binding has removed; and this binding keeps `ErrSharedRunnerCommandFlags` with the construction refusal behind it, which the v3 binding has removed. See [Package surface](../README.md#package-surface) in the umbrella README for the lists, then the [umbrella README](../README.md) for the design details.

## Targeted deletion with `--prune`

`--prune` renders the current configured destinations without writing and deletes only those files. It no longer generates replacements or scans neighboring files. Missing targets produce `cron.pruneDestinationMissing` warnings; other filesystem errors fail the run, preserving the report of completed removals. No output or log directories are created. Retire a destination while it is still configured, and run generation separately for replacements. See the [shared generator documentation](../README.md) for the full contract.

Regeneration preserves existing destination permissions, including operator-restricted crontabs.
